--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/tpaszun/node-conversations/issues"
   },
-  "homepage": "https://github.com/tpaszun/node-conversations#readme"
+  "homepage": "https://github.com/tpaszun/node-conversations#readme",
+  "devDependencies": {
+    "express": "^4.16.2",
+    "express-session": "^1.15.6"
+  }
 }
