--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   },
   "homepage": "https://github.com/tpaszun/node-conversations#readme",
   "devDependencies": {
+    "chai": "^4.1.2",
     "express": "^4.16.2",
-    "express-session": "^1.15.6"
+    "express-session": "^1.15.6",
+    "mocha": "^4.1.0"
+  },
+  "dependencies": {
+    "uuid": "^3.1.0"
   }
 }
