--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "jshint": "^2.9.5",
     "node-session": "^1.2.1",
     "parseurl": "^1.3.2",
     "stackjs": "^0.1.0",
